LightSensor and Motor added

--- a/controls/CANNASUB/CANNASUB/CANNASUB.vcxproj
+++ b/controls/CANNASUB/CANNASUB/CANNASUB.vcxproj
@@ -116,14 +116,20 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Lightsensor.h" />
+    <ClInclude Include="Motor.h" />
     <ClInclude Include="__vm\.CANNASUB.vsarduino.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Lightsensor.cpp" />
+    <ClCompile Include="Motor.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties config.Debug.customdebug_uno_debugger_type="universal" />
+      <UserProperties arduino.upload.port="COM3" config.Debug.customdebug_uno_debugger_type="universal" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
