--- a/controls/CANNASUB/CANNASUB/CANNASUB.vcxproj.filters
+++ b/controls/CANNASUB/CANNASUB/CANNASUB.vcxproj.filters
@@ -24,5 +24,19 @@
     <ClInclude Include="__vm\.CANNASUB.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Lightsensor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Motor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Lightsensor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Motor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
